# pyracetrack

./: README.rst  pyproject.toml
docs/: _config.yml  _toc.yml  index.ipynb
src/pyracetrack/: cli.py  core.py  track.py
tests/: test_generation.py
