[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyracetrack"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.10"
description = "Generates 2d/3d racetracks procedurally."
readme = "README.rst"
authors = [
    { name = "avi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "click",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "perlin_noise"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "pre-commit",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "black[jupyter]>=22.12.0",
    "isort",
    "mypy",
    "jupyter-book",
    "GitPython",
]

[tool.setuptools_scm]
version_file = "src/pyracetrack/_version.py"

[tool.semantic_release]
version_variable = "src/pyracetrack/_version.py:__version__"
version_source = "commit"
commit_version_number = true
commit_subject = "chore(release): {version}"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
no_local_version = true


[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.rst"

[project.urls]  # Optional
"Homepage" = "https://avivajpeyi.github.io/pyracetrack/"
"Bug Reports" = "https://github.com/avivajpeyi/pyracetrack/issues"
"Source" = "https://github.com/avivajpeyi/pyracetrack/"

[project.scripts]
generate_track = "pyracetrack.cli:main"


[tool.setuptools]
package-data = { "pyracetrack" = [""] }



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = [
    "pyracetrack"
]

[tool.coverage.paths]
source = [
    "src/pyracetrack",
    "**/site-packages/pyracetrack"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplentedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

ignore_errors = true

[tool.coverage.html]
title = "pyracetrack Coverage Test Report"


[[tool.mypy.overrides]]
module = "matplotlib.*,scipy.*,numba.*,bilby.*"
ignore_missing_imports = true
